# ZhiJian-AeroNLP

./: .gitattributes  .gitignore  README.md  README_ch.md  config.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
apps/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py  deps.py
apps/backend/app/api/routes/: api_keys.py  auth.py  dashboard.py  health.py  notam.py  tasks.py  training.py
apps/backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  rbac.py  security.py
apps/backend/app/db/: models.py  session.py
apps/backend/app/schemas/: auth.py  common.py  dashboard.py  notam.py  tasks.py
apps/backend/app/scripts/: seed_demo.py
apps/backend/app/services/: audit.py  notam_parser.py  training_service.py
apps/frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.json
config/: prompts.py  settings.py
dataset/: airport_test.json  airport_train.json  airway_test.json  airway_train.json  light_1_test.json  navigation_test.json  navigation_train.json  procedure_test.json  procedure_train.json  runway_test.json  runway_train.json  rvr_test.json  rvr_train.json  stand_test.json  stand_train.json  standard_test.json  standard_train.json  taxiway_test.json  taxiway_train.json
docs/: ARCHITECTURE.md
docs/demos/: 01_auth_and_parse.ps1  02_dashboard.ps1  03_tasks.ps1
infra/: docker-compose.yml
src/: agents.py  api_manager.py  debate.py  mining.py  models.py  post_processor.py  utils.py
(+51 files in other folders)
