[project]
name = "kbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jieba>=0.42.1",
    "naive-stopwords>=0.0.2",
    "openai>=1.97.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rake-nltk>=1.0.6",
    "requests>=2.32.4",
    "spacy>=3.8.7",
    "streamlit>=1.38.0",
    "xlrd>=2.0.2",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "poml>=0.0.8",
    "scikit-learn>=1.7.2",
]
